--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
-body { font-family: Arial, sans-serif; /* Default font for the body */ margin: 0; padding: 0; box-sizing: border-box; }h1 { font-size: 2em; font-weight: bold; } sb { font-family: 'Arial Black', Gadget, sans-serif; }
-
+body { font-family: Arial, sans-serif; /* Default font for the body */ margin: 0; padding: 0; box-sizing: border-box; }
 sb { font-family: 'Arial Black', Gadget, sans-serif; }
 
-h1 { font-size: 2em; font-weight: bold; }
+h1 { font-size: 2em; font-weight: bold; text-align: center;}
 
 @media (max-width: 600px) {
     h1 {
