--- a/css/main.css
+++ b/css/main.css
@@ -79,8 +79,9 @@ header {
 }
 
 .menu a {
+    font-family: 'Arial Black', sans-serif;
     color: #FDFDFD;
-    font-size: 24px;
+    font-size: 28px;
     text-decoration: none;
     margin: 15px 0;
 }
