--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+a {
+    font-family: 'Arial Black', sans-serif;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -79,7 +83,6 @@ header {
 }
 
 .menu a {
-    font-family: 'Arial Black', sans-serif;
     color: #FDFDFD;
     font-size: 28px;
     text-decoration: none;
