--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,6 +1,6 @@
 .slideshowContainer {
     position: relative;
-    max-width: 575px;
+    max-width: 100%;
     margin: auto;
     overflow: hidden;
     border-radius: 12.5px;
@@ -22,12 +22,8 @@
 
 .text {
     position: absolute;
-    bottom: 20px;
-    left: 20px;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 1);
     color: #fff;
-    padding: 10px;
-    border-radius: 5px;
 }
 
 .prev, .next {
