--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,6 +1,6 @@
 .slideshowContainer {
     position: relative;
-    max-width: 100%;
+    max-width: 575px;
     margin: auto;
     overflow: hidden;
     border-radius: 12.5px;
@@ -24,6 +24,8 @@
     position: absolute;
     background: rgba(0, 0, 0, 1);
     color: #fff;
+    top: 20px;
+    left: 20px;
 }
 
 .prev, .next {
